--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <!-- Logo -->
                             <div class="col-xl-2 col-lg-2">
                                 <div class="logo">
-                                    <a href="index.html">Logo</a>
+                                    <a href="index.html">C2E</a>
                                 </div>
                             </div>
                             <div class="col-xl-10 col-lg-10">
@@ -587,7 +587,7 @@
                                     <div class="single-footer-caption mb-30">
                                         <!-- logo -->
                                         <div class="footer-logo mb-25">
-                                            <a href="index.html"><img src="" alt="Logo"></a>
+                                            <a href="index.html">C2E</a>
                                         </div>
                                         <div class="footer-tittle">
                                             <div class="footer-pera">
