--- a/roles.html
+++ b/roles.html
@@ -144,7 +144,7 @@
                                     <div class="serial col-2">C2E</div>
                                     <div class="serial col-2">01-15-2020</div>
                                     <div class="serial col-2">02-15-2020</div>
-                                    <div class="serial col-2"><img src="assets/img/edit.png" class="img edit-icon" data-toggle="modal" data-target="#roleModal"></div>
+                                    <div class="serial col-2"><img src="assets/img/edit.png" class="img edit-icon" data-toggle="modal" data-target="#editRoleModal"></div>
                                 </div>
                                 <div class="table-row">
                                     <div class="serial col-1">02</div>
@@ -153,7 +153,7 @@
                                     <div class="serial col-2">C2E</div>
                                     <div class="serial col-2">04-15-2020</div>
                                     <div class="serial col-2">06-27-2020</div>
-                                    <div class="serial col-2"><img src="assets/img/edit.png" class="img edit-icon" data-toggle="modal" data-target="#roleModal"></div>
+                                    <div class="serial col-2"><img src="assets/img/edit.png" class="img edit-icon" data-toggle="modal" data-target="#editRoleModal"></div>
                                 </div>
                                 <div class="table-row">
                                     <div class="serial col-1">03</div>
@@ -162,7 +162,7 @@
                                     <div class="serial col-2">None</div>
                                     <div class="serial col-2">11-02-2021</div>
                                     <div class="serial col-2">12-12-2022</div>
-                                    <div class="serial col-2"><img src="assets/img/edit.png" class="img edit-icon" data-toggle="modal" data-target="#roleModal"></div>
+                                    <div class="serial col-2"><img src="assets/img/edit.png" class="img edit-icon" data-toggle="modal" data-target="#editRoleModal"></div>
                                 </div>
                             </div>
                         </div>
@@ -178,7 +178,7 @@
                         <div class="modal-dialog" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="">Add a new user</h5>
+                                    <h5 class="modal-title" id="">Add a new role</h5>
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
@@ -224,7 +224,68 @@
 
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary mx-auto" data-dismiss="modal" id="close-user">Close</button>
-                                    <button type="button" class="btn btn-primary mx-auto" id="add-user">Add User</button>
+                                    <button type="button" class="btn btn-primary mx-auto" id="add-role">Add Role</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                <!-- Edit Role Modal -->
+                <div class="container">
+                    <!-- Modal -->
+                    <div class="modal fade" id="editRoleModal" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="">Edit Role</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    <form>
+                                        <div class="form-row">
+                                            <div class="form-group mx-auto col-md-8">
+                                                <label>Role</label>
+                                                <input type="text" class="form-control" id="role-info" placeholder="Role">
+                                            </div>
+                                        </div>
+                                        <div class="form-row">
+                                            <div class="form-group mx-auto col-md-8">
+                                                <label>Description</label>
+                                                <input type="text" class="form-control" id="desc-info" placeholder="Description">
+                                            </div>
+                                        </div>
+                                        <div class="form-row">
+                                            <label for="neighborhood-info">Neighborhood</label>
+                                            <div class="form-group mx-auto col-md-8">
+                                                <select class="form-control" id="neighborhood-info" placeholder="">
+                                                    <option>Corporate Business Office (106)</option>
+                                                    <option>Human Resources (101)</option>
+                                                    <option>IT Division (104)</option>
+                                                    <option>Comptroller (10x)</option>
+                                                    <option>Property Management (107)</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="form-row">
+                                            <div class="form-group col-md-4 mx-auto">
+                                                <label>Start Date</label>
+                                                <input type="text" class="form-control" id="start-date">
+                                            </div>
+                                            <div class="form-group col-md-4 mx-auto">
+                                                <label>End Date</label>
+                                                <input type="text" class="form-control" id="end-date">
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary mx-auto" data-dismiss="modal" id="close-user">Close</button>
+                                    <button type="button" class="btn btn-secondary mx-auto" data-dismiss="modal" id="close-user">Delete</button>
+                                    <button type="button" class="btn btn-primary mx-auto" id="saveChanges">Save</button>
                                 </div>
                             </div>
                         </div>
@@ -244,7 +305,7 @@
                                     <div class="single-footer-caption mb-30">
                                         <!-- logo -->
                                         <div class="footer-logo mb-25">
-                                            <a href="index.html"><img src="" alt="Logo"></a>
+                                            <a href="index.html">C2E</a>
                                         </div>
                                         <div class="footer-tittle">
                                             <div class="footer-pera">
@@ -356,8 +417,7 @@
             i = 4; // place holder for user ID until database is ready
 
             // Button action when add is clicked
-            $("#add-user").click(function() {
-                console.log("Add pressed");
+            $("#add-role").click(function() {
                 $("#role-table").append(' <div class="table-row"><div class="serial col-1">0' + i + '</div><div class="serial col-1">' + $("#role-info").val() + '</div><div class="serial col-2">' + $("#desc-info").val() + '</div><div class="serial col-2">' + $("#neighborhood-info").val() + '</div><div class="serial col-2">' + $("#start-date").val() + '</div> <div class="serial col-2">' + $("#end-date").val() + '</div>   <div class="serial col-2"><img src="assets/img/edit.png" class="img edit-icon" data-toggle="modal" data-target="#roleModal"></div></div>');
                 i++;
                 $("#close-user").click();
