--- a/roles.html
+++ b/roles.html
@@ -6,7 +6,7 @@
         <title>C2E | Roles</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-<!--        <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">-->
+        <!--        <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">-->
 
         <!-- CSS here -->
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -34,7 +34,6 @@
             .edit-icon {
                 height: 25px;
                 width: 25px;
-
             }
 
         </style>
@@ -96,7 +95,7 @@
             </div>
             <!-- Header End -->
         </header>
-        <main>
+        <main id="main">
             <!--? slider Area Start-->
             <section class="slider-area slider-area2 bg-dark">
                 <div class="slider-active">
@@ -167,11 +166,132 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="mx-auto p-3"><button type="button" class="btn btn-success" data-toggle="modal" data-target="#roleModal" id="add">Add</button></div>
+                            <div class="mx-auto mt-3 p-3"><button type="button" class="btn btn-success" data-toggle="modal" data-target="#roleModal" id="add">Add</button></div>
                         </div>
                     </div>
                 </div>
 
+                <!-- Explore Applications -->
+                <div class="topic-area section-padding40">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-xl-7 col-lg-8">
+                                <div class="section-tittle text-center mb-55">
+                                    <h2>Explore top applications</h2>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-3 col-md-4 col-sm-6">
+                                <div class="single-topic text-center mb-30">
+                                    <div class="topic-img">
+                                        <img src="assets/img/gallery/topic2.png" alt="">
+                                        <div class="topic-content-box">
+                                            <div class="topic-content">
+                                                <h3><a href="#">Application Name</a></h3>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6">
+                                <div class="single-topic text-center mb-30">
+                                    <div class="topic-img">
+                                        <img src="assets/img/gallery/topic3.png" alt="">
+                                        <div class="topic-content-box">
+                                            <div class="topic-content">
+                                                <h3><a href="#">Application Name</a></h3>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6">
+                                <div class="single-topic text-center mb-30">
+                                    <div class="topic-img">
+                                        <img src="assets/img/gallery/topic4.png" alt="">
+                                        <div class="topic-content-box">
+                                            <div class="topic-content">
+                                                <h3><a href="#">Application Name</a></h3>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6">
+                                <div class="single-topic text-center mb-30">
+                                    <div class="topic-img">
+                                        <img src="assets/img/gallery/topic5.png" alt="">
+                                        <div class="topic-content-box">
+                                            <div class="topic-content">
+                                                <h3><a href="#">Application Name</a></h3>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6">
+                                <div class="single-topic text-center mb-30">
+                                    <div class="topic-img">
+                                        <img src="assets/img/gallery/topic6.png" alt="">
+                                        <div class="topic-content-box">
+                                            <div class="topic-content">
+                                                <h3><a href="#">Application Name</a></h3>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6">
+                                <div class="single-topic text-center mb-30">
+                                    <div class="topic-img">
+                                        <img src="assets/img/gallery/topic7.png" alt="">
+                                        <div class="topic-content-box">
+                                            <div class="topic-content">
+                                                <h3><a href="#">Application Name</a></h3>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6">
+                                <div class="single-topic text-center mb-30">
+                                    <div class="topic-img">
+                                        <img src="assets/img/gallery/topic8.png" alt="">
+                                        <div class="topic-content-box">
+                                            <div class="topic-content">
+                                                <h3><a href="#">Application Name</a></h3>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6">
+                                <div class="single-topic text-center mb-30">
+                                    <div class="topic-img">
+                                        <img src="assets/img/gallery/topic1.png" alt="">
+                                        <div class="topic-content-box">
+                                            <div class="topic-content">
+                                                <h3><a href="#">Application Name</a></h3>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row justify-content-center">
+                            <div class="col-xl-12">
+                                <div class="section-tittle text-center mt-20">
+                                    <a href="" class="border-btn">View More Applications</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- End -->
+
+
+                <!--Add New Role Modal -->
                 <div class="container">
                     <!-- Modal -->
                     <div class="modal fade" id="roleModal" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
@@ -230,7 +350,7 @@
                         </div>
                     </div>
                 </div>
-                
+
                 <!-- Edit Role Modal -->
                 <div class="container">
                     <!-- Modal -->
